--- a/1-adding-document-elements-with-D3.html
+++ b/1-adding-document-elements-with-D3.html
@@ -1,4 +1,6 @@
-// D3 documentation: https://d3js.org/
+<!-- D3 documentation: https://d3js.org/ -->
+
+<script src="https://d3js.org/d3.v5.min.js"></script>
 
 <body>
   <script>
