Added Classes with D3

--- a/6-changing-styles-based-on-data.html
+++ b/6-changing-styles-based-on-data.html
@@ -6,7 +6,7 @@
         .data(dataset)
         .enter()
         .append("h2")
-        .text((d) => (d + " USD"))
+        .text((num) => (num + " USD"))
   
         // if/else condition:
         .style("color", (num) => {
